--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.6.0",
     "multer": "^1.4.5-lts.1"
   }
