config on vercel.json in api folder

--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,3 @@
  MONGO_URI = "mongodb+srv://adebowalevictorjheart:qhY94OmCG0c1fy15@cluster0.7tfmsl0.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET ="awedfgyujkll;pasdfgert"
+PORT=5002
