--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node index.js",
     "start": "node index.js"
   },
   "dependencies": {
