add node engine

--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,9 @@
     "build": "yarn install",
     "start": "node index.js"
   },
+  "engines": {
+    "node": "18.16.0"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
